Fixed the front-end not showing the year of birth of celebrities

--- a/moviemall-client/src/assets/styles/navbar.css
+++ b/moviemall-client/src/assets/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 1em 5%;
     background-color: #2c3e50;
